// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrencyInput should render with BGN currency styles 1`] = `
.circuit-2 {
  color: #2567D8;
  position: absolute;
  top: 1px;
  right: 1px;
  height: 16px;
  width: 16px;
  margin: 12px;
  pointer-events: none;
}

.circuit-3 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  width: 100%;
  font-size: 15px;
  line-height: 24px;
  text-align: right;
  padding-left: calc( 12px + 16px + 12px );
  padding-right: calc( 12px + 16px + 12px );
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
}

.circuit-0::placeholder {
  color: #9DA7B1;
}

<div
  className="circuit-3 circuit-4"
  disabled={false}
>
  <input
    aria-invalid={false}
    className="circuit-0 circuit-1"
    disabled={false}
    placeholder="123,45"
    required={false}
  />
  <div
    className="circuit-2"
  >
    лв.
  </div>
</div>
`;

exports[`CurrencyInput should render with USD currency styles 1`] = `
.circuit-3 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

.circuit-0 {
  color: #2567D8;
  position: absolute;
  top: 1px;
  left: 1px;
  height: 16px;
  width: 16px;
  margin: 12px;
  pointer-events: none;
}

.circuit-1 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  width: 100%;
  font-size: 15px;
  line-height: 24px;
  padding-left: calc( 12px + 16px + 12px );
  padding-right: calc( 12px + 16px + 12px );
}

.circuit-1:focus,
.circuit-1:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-1::-webkit-input-placeholder {
  color: #9DA7B1;
}

.circuit-1::-moz-placeholder {
  color: #9DA7B1;
}

.circuit-1:-ms-input-placeholder {
  color: #9DA7B1;
}

.circuit-1::placeholder {
  color: #9DA7B1;
}

<div
  className="circuit-3 circuit-4"
  disabled={false}
>
  <div
    className="circuit-0"
  >
    $
  </div>
  <input
    aria-invalid={false}
    className="circuit-1 circuit-2"
    disabled={false}
    placeholder="123.45"
    required={false}
  />
</div>
`;

exports[`CurrencyInput should render with default styles 1`] = `
.circuit-2 {
  color: #2567D8;
  position: absolute;
  top: 1px;
  right: 1px;
  height: 16px;
  width: 16px;
  margin: 12px;
  pointer-events: none;
}

.circuit-3 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  width: 100%;
  font-size: 15px;
  line-height: 24px;
  text-align: right;
  padding-left: calc( 12px + 16px + 12px );
  padding-right: calc( 12px + 16px + 12px );
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
}

.circuit-0::placeholder {
  color: #9DA7B1;
}

<div
  className="circuit-3 circuit-4"
  disabled={false}
>
  <input
    aria-invalid={false}
    className="circuit-0 circuit-1"
    disabled={false}
    required={false}
  />
  <div
    className="circuit-2"
  >
    €
  </div>
</div>
`;

exports[`CurrencyInput should render with disabled styles when passed the disabled prop 1`] = `
.circuit-2 {
  color: #2567D8;
  position: absolute;
  top: 1px;
  right: 1px;
  height: 16px;
  width: 16px;
  margin: 12px;
  pointer-events: none;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  width: 100%;
  font-size: 15px;
  line-height: 24px;
  text-align: right;
  padding-left: calc( 12px + 16px + 12px );
  padding-right: calc( 12px + 16px + 12px );
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
}

.circuit-0::placeholder {
  color: #9DA7B1;
}

.circuit-3 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

<div
  className="circuit-3 circuit-4"
  disabled={true}
>
  <input
    aria-invalid={false}
    className="circuit-0 circuit-1"
    disabled={true}
    required={false}
  />
  <div
    className="circuit-2"
  >
    €
  </div>
</div>
`;

exports[`CurrencyInput should render with invalid styles when passed the invalid prop 1`] = `
.circuit-2 {
  color: #2567D8;
  position: absolute;
  top: 1px;
  right: 1px;
  height: 16px;
  width: 16px;
  margin: 12px;
  pointer-events: none;
}

.circuit-3 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  width: 100%;
  font-size: 15px;
  line-height: 24px;
  text-align: right;
  padding-left: calc( 12px + 16px + 12px );
  padding-right: calc( 12px + 16px + 12px );
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
}

.circuit-0::placeholder {
  color: #9DA7B1;
}

.circuit-0:not(:focus) {
  border-color: #FFAF9F;
}

.circuit-0:not(:focus)::-webkit-input-placeholder {
  color: #FFAF9F;
}

.circuit-0:not(:focus)::-moz-placeholder {
  color: #FFAF9F;
}

.circuit-0:not(:focus):-ms-input-placeholder {
  color: #FFAF9F;
}

.circuit-0:not(:focus)::placeholder {
  color: #FFAF9F;
}

<div
  className="circuit-3 circuit-4"
  disabled={false}
>
  <input
    aria-invalid={true}
    className="circuit-0 circuit-1"
    disabled={false}
    required={false}
  />
  <div
    className="circuit-2"
  >
    €
  </div>
</div>
`;

exports[`CurrencyInput should render with optional styles when passed the optional prop 1`] = `
.circuit-2 {
  color: #2567D8;
  position: absolute;
  top: 1px;
  right: 1px;
  height: 16px;
  width: 16px;
  margin: 12px;
  pointer-events: none;
}

.circuit-3 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  width: 100%;
  font-size: 15px;
  line-height: 24px;
  background-color: #FAFBFC;
  border-style: dashed;
  box-shadow: none;
  text-align: right;
  padding-left: calc( 12px + 16px + 12px );
  padding-right: calc( 12px + 16px + 12px );
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
}

.circuit-0::placeholder {
  color: #9DA7B1;
}

<div
  className="circuit-3 circuit-4"
  disabled={false}
>
  <input
    aria-invalid={false}
    className="circuit-0 circuit-1"
    disabled={false}
    required={false}
  />
  <div
    className="circuit-2"
  >
    €
  </div>
</div>
`;
